:encoding=UTF-8:

{{{ Version 5.0pre1

Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl, Robert Schwenn,
Martin Raspe, Max Funk, SPennington, Ingo Tomahogh, Jarek Czekalski, Jojaba,
Stephen Blackheath, Makarius and Chris Sullins for contributing to this
release.

{{{ Bug fixes

- Fixed NPE when opening View option pane for the first time on a fresh
  installation (#3520577 Matthieu Casanova)

- Cannot DnD betweeen PingPongLists (#3501020 Jarek Czekalski)

- Fixed freezes on hypersearch with encoding errors.
  (#3502585 Jarek Czekalski)

- Fixed IO error when changing VFS Browser filter content
  (#3502820 Matthieu Casanova)

- Remove jar cache when unloading a plugin (#3514022 Matthieu Casanova)

- Fixed macros at menu split are unaccessible (#3512853 Jarek Czekalski)

- Fixed favorites menu actions (#3512250 Matthieu Casanova)

- If the same plugin is installed in home and install folder, only the newest
  is loaded. (#1848802 Matthieu Casanova)

- Fixed replace all on a directory that was broken (#3480583 Matthieu Casanova)

- Fixed rectangular selection constructor (patch #3440310 peibl)

- When copying a file in VFSBrowser, if a file with the same name already exists
  a suffix copy-n is added to avoid deleting the existing file
  (#3470759 Matthieu Casanova)

- Fixed Ctrl + key not working in completion popup (Matthieu Casanova)

- Fixed copy of Hypersearch results adding \r in the clipboard
  (#3142456 Matthieu Casanova)

- The Java based installer now correctly handles GNU style long filenames in
  the installer package and thus does not corrupt the JavaDoc files anymore
  (#2327520 Björn "Vampire" Kautler)

- Several message boxes were not being created on the EDT which would result in
  tiny, non-resizable message boxes. (#3441535 Dale Anson)

}}}
{{{ API Changes

- New public constructor for org.gjt.sp.jedit.gui.ErrorListDialog